--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,14 +1,15 @@
-<div id="sidebar">
+<div id="sidebar" class="init">
+   <div id="toggle-sidebar" class="open"></div>
    <div class="top">
-      <p class="title"></p>
+      <p class="title">Individual Results</p>
       
       <div id="list-page-ctls">
          <div class="counts">
             <div class="total-div">
-               <label>Total: <span class="total"></span></label>
+               <label>Total: <span class="total">0</span></label>
             </div>
             <div class="pages-div">
-               <label>Page: <span class="page-count"></span></label>
+               <label>Page: <span class="page-count">0 of 0</span></label>
             </div>
             <div style="clear:both;"></div>
          </div>
