--- a/app/assets/stylesheets/intro_dialog.scss
+++ b/app/assets/stylesheets/intro_dialog.scss
@@ -1,24 +1,20 @@
 #intro-dialog {
   color: black;
-  background-color: #f5f5f5;
+  background-color: white;
   border: 1px solid black;
-  width: 225px;
+//  width: 225px;
   padding: 0px;
   border-radius: 2px 2px 5px 5px;
   font-size: 0.9em;
   font-weight: 100;
   box-shadow: 0px 0px 15px black;
   position: absolute;
-  display: none;
   cursor: default;
   word-break: break-all;
   word-wrap: break-word;
   z-index: 1000;
-
+  
   .titlebar {
-    padding: 1px 1px 3px 5px;
-    border-bottom: 1px solid #777;
-    background-color: #ddd;
     .button-group {
       float:right;
 
@@ -30,35 +26,12 @@
         }
       }
 
-      .pinned {
-        border: 1px inset;
-        background-color: #ccc;
-        box-shadow: inset 0 0 5px #444;
-        margin: 0;
-        &:hover {
-          box-shadow: inset 0 0 5px #8cf;
-        }
-      }
     }
   }
 
   #info {
-    margin: 8px 10px;
-    font-size: 0.8em;
-    border-bottom: 1px solid #777;
+    margin: 30px 10px;
     padding-bottom: 8px;
-  }
-
-  p {
-    margin: 0px;
-    border-bottom: 1px solid #999;
-    font-size: 0.9em;
-    text-align: center;
-    background-color: #dedede;
-  }
-
-  .padded {
-    margin-left: 25px;
   }
 
 }
