add all the steps and the step select fn

--- a/app/views/home/_intro_dialog.html.erb
+++ b/app/views/home/_intro_dialog.html.erb
@@ -5,7 +5,16 @@
       </div>
    </div>
    <div id="info">
-     <%= image_tag 'intro/1_formulate.png', class: 'intro-step' %>
+     <%= image_tag 'intro/step_1.png', id: 'step-1', class: 'intro-step' %>
+     <%= image_tag 'intro/step_2.png', id: 'step-2', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_3.png', id: 'step-3', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_4.png', id: 'step-4', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_5.png', id: 'step-5', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_6.png', id: 'step-6', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_7.png', id: 'step-7', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_8.png', id: 'step-8', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_9.png', id: 'step-9', class: 'intro-step hidden' %>
+     <%= image_tag 'intro/step_10.png', id: 'step-10', class: 'intro-step hidden' %>
    </div>
 </div>
 
