next button click action

--- a/app/views/home/_intro_dialog.html.erb
+++ b/app/views/home/_intro_dialog.html.erb
@@ -15,7 +15,8 @@
      <%= image_tag 'intro/step_8.png', id: 'step-8', class: 'intro-step hidden' %>
      <%= image_tag 'intro/step_9.png', id: 'step-9', class: 'intro-step hidden' %>
      <%= image_tag 'intro/step_10.png', id: 'step-10', class: 'intro-step hidden' %>
-   </div>
+     <%= image_tag 'intro/next_arrow.png', id: 'next-step-button' %>
+   </div>   
 </div>
 
 <script type="text/javascript">
