--- a/app/assets/stylesheets/intro_dialog.scss
+++ b/app/assets/stylesheets/intro_dialog.scss
@@ -2,9 +2,8 @@
   color: black;
   background-color: white;
   border: 1px solid black;
-//  width: 225px;
   padding: 0px;
-  border-radius: 2px 2px 5px 5px;
+  border-radius: 10px 10px 10px 10px;
   font-size: 0.9em;
   font-weight: 100;
   box-shadow: 0px 0px 15px black;
@@ -29,7 +28,22 @@
     }
   }
   
+  #intro-icon {
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  
+  #info {
+    margin-left: 20px;
+  }
+  
+  #close-x-button {
+    margin-right: 5px;
+    float: right;    
+  }
+  
   #next-step-button {
+    margin-top: 100px;
     float: right;
   }
   
@@ -37,9 +51,5 @@
     display: none;
   }
 
-  #info {
-    margin: 30px 10px;
-    padding-bottom: 8px;
-  }
 
 }
