--- a/app/views/home/_intro_dialog.html.erb
+++ b/app/views/home/_intro_dialog.html.erb
@@ -6,7 +6,6 @@
       </div>
    </div>
    <div id="info">
-     <% image_tag 'intro/next_arrow.png', id: 'next-step-button' %>
      <%= image_tag 'intro/step_1.png', id: 'step-1', class: 'intro-step' %>
      <%= image_tag 'intro/step_2.png', id: 'step-2', class: 'intro-step hidden' %>
      <%= image_tag 'intro/step_3.png', id: 'step-3', class: 'intro-step hidden' %>
@@ -18,6 +17,9 @@
      <%= image_tag 'intro/step_9.png', id: 'step-9', class: 'intro-step hidden' %>
      <%= image_tag 'intro/step_10.png', id: 'step-10', class: 'intro-step hidden' %>
    </div>   
+   <div id='next-step'>
+     <%= image_tag 'intro/next_arrow.png', id: 'next-step-button' %>
+   </div>
 </div>
 
 <script type="text/javascript">
