add dont show option

--- a/app/assets/stylesheets/intro_dialog.scss
+++ b/app/assets/stylesheets/intro_dialog.scss
@@ -37,6 +37,11 @@
     margin-left: 20px;
   }
   
+  #do-not-show {
+    margin-top: -20px;
+    margin-left: 20px;
+  }
+  
   #close-x-button {
     margin-right: 5px;
     float: right;    
