--- a/app/views/home/_intro_dialog.html.erb
+++ b/app/views/home/_intro_dialog.html.erb
@@ -17,6 +17,9 @@
      <%= image_tag 'intro/step_9.png', id: 'step-9', class: 'intro-step hidden' %>
      <%= image_tag 'intro/step_10.png', id: 'step-10', class: 'intro-step hidden' %>
    </div>   
+   <div id="do-not-show">
+     <label><input id="do-not-show-check" type="checkbox" name="do-not-show-check" value="false"> Don't show this again.</label>
+   </div>
    <div id='next-step'>
      <%= image_tag 'intro/next_arrow.png', id: 'next-step-button' %>
    </div>
