--- a/app/assets/stylesheets/intro_dialog.scss
+++ b/app/assets/stylesheets/intro_dialog.scss
@@ -2,7 +2,7 @@
   color: black;
   background-color: white;
   border: 1px solid black;
-  padding: 0px;
+  padding: 0px 20px 20px 0px;
   border-radius: 10px 10px 10px 10px;
   font-size: 0.9em;
   font-weight: 100;
@@ -38,12 +38,13 @@
   }
   
   #do-not-show {
-    margin-top: -20px;
-    margin-left: 20px;
+    padding: 10px;
+    margin-top: -15px;
+    margin-left: 25px;
   }
   
   #close-x-button {
-    margin-right: 5px;
+    margin-right: -10px;
     float: right;    
   }
     
