--- a/app/views/home/_intro_dialog.html.erb
+++ b/app/views/home/_intro_dialog.html.erb
@@ -20,6 +20,9 @@
    <div id="do-not-show">
      <label><input id="do-not-show-check" type="checkbox" name="do-not-show-check" value="false"> Don't show this again.</label>
    </div>
+   <div id='prev-step'>
+     <%= image_tag 'intro/prev_arrow.png', id: 'prev-step-button' %>
+   </div>
    <div id='next-step'>
      <%= image_tag 'intro/next_arrow.png', id: 'next-step-button' %>
    </div>
