update help links

--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -7,6 +7,6 @@
       <input id="reset" type="button" value="Reset"/>
       <input id="recenter" type="button" value="Recenter"/>
       <input id="filter" type="button" value="Filter"/>
-      <a id="help" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
+      <a id="help" target="_blank" href="http://idhmcmain.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
    </div>
 </div>
