--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
      <button id="show-timeline-button">Show Timeline</button>
      <div id="loading-timeline">Loading Timeline</div>
      <div id="bigdiva-logo"></div>
-     <a id="help-lower" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
+     <a id="help-lower" target="_blank" href="http://idhmcmain.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
 
    
       <div id="timeline-tabs" class="tabs">
