Initial commit of resource guide addition

--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -8,5 +8,6 @@
       <input id="recenter" type="button" value="Recenter"/>
       <input id="filter" type="button" value="Filter"/>
       <a id="help" target="_blank" href="http://idhmcmain.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
+      <a id="guide" target="_blank" href="/resources/">Resource Guide</a>
    </div>
 </div>
