--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -29,7 +29,7 @@ body {
   width: 200000px;
 }
 
-#sidebar{ 
+#sidebar{
    width: 225px;
    height: 70%;
    background-color: #F0F0F0;
@@ -41,12 +41,12 @@ body {
    border-right: 0;
    border-top: 1px solid #ccc;
    z-index: 10;
-   
+
    .hit.on-graph {
       background-color: #eaeaff;
       border-color: #448;
    }
-   
+
    #toggle-sidebar {
       cursor: pointer;
       width:20px;
@@ -64,7 +64,7 @@ body {
    #toggle-sidebar.open {
       background-position: 0 20px;
    }
-   
+
    #list-page-ctls {
       font-size: 0.8em;
       label {
@@ -72,9 +72,9 @@ body {
          font-family: sans-serif;
          box-sizing: border-box;
          width: 100%;
-         display: inline;    
+         display: inline;
       }
-      
+
       .page-nav, .page-link{
          cursor: pointer;
          color: #449;
@@ -97,14 +97,14 @@ body {
          padding: 3px 0 1px 0;
       }
       .total-div {
-         float: left;  
+         float: left;
       }
       .pages-div {
          position: absolute;
          right: 2px;
       }
    }
-   
+
    p.doc-name {
       border-bottom: 1px solid #ddd;
       padding-bottom: 2px;
@@ -122,7 +122,7 @@ body {
          }
       }
    }
-   
+
    label {
       font-weight: bold;
       font-family: sans-serif;
@@ -134,11 +134,11 @@ body {
          font-weight: 100;
       }
    }
-   
+
    .top {
       height: 60px;
    }
-   
+
    .title {
       margin: 0;
       font-size: 0.8em;
@@ -150,7 +150,7 @@ body {
       overflow: hidden;
       text-overflow: ellipsis;
    }
-   
+
    #content {
       margin: 2px;
       overflow-y: scroll;
@@ -163,7 +163,7 @@ body {
       border-radius: 8px 0 0 8px;
       padding: 2px;
    }
-   
+
    .hit {
       font-size: 0.7em;
       border: 1px solid #999;
@@ -206,7 +206,7 @@ a#help:visited, a#guide:visited {
    color: #444;
    font-weight: bold;
    height: 95px;
-   
+
    #left-header {
       float:left;
       h2 {
@@ -221,7 +221,7 @@ a#help:visited, a#guide:visited {
         position: absolute;
         left: 2px;
         bottom: 0px;
-  
+
         .key {
           position: relative;
           top: -3px;
@@ -251,7 +251,7 @@ a#help:visited, a#guide:visited {
           background-color: #006d2c;
         }
         .discipline {
-          background-color: #b30000;
+          background-color: #e2aa00;
         }
         .format {
           background-color: #810f7c;
@@ -355,7 +355,7 @@ footer {
 .leaf.discipline {
   fill: url(/#gradient-discipline-normal);
 //  fill: #b66;
-  stroke: #b30000;
+  stroke: #e2aa00;
 }
 
 // parent is only used for resource/archive nodes
@@ -379,7 +379,7 @@ footer {
   stroke: #810f7c;
 }
 .parent.discipline {
-  stroke: #b30000;
+  stroke: #e2aa00;
 }
 
 .empty.discipline {
@@ -600,7 +600,7 @@ div.search {
   float: right;
   margin-top: 15px;
   margin-right: 10px;
-  
+
   input[type=text] {
     width: 250px;
     margin-right: 5px;
@@ -796,7 +796,7 @@ div.search {
    position: fixed;
    left: 0;
    bottom: 0;
-   
+
    #loading-timeline {
       background-image: image-url('loader.gif');
       background-repeat: no-repeat;
@@ -818,7 +818,7 @@ div.search {
       border-right: 1px solid black;
       border-bottom: 1px solid black;
    }
-  
+
    #show-timeline-button, a#help-lower  {
       font-size: 16px;
       border-radius: 0 8px 8px 0;
@@ -844,8 +844,8 @@ div.search {
          background-color: #e5e5e5;
       }
    }
-   
-   a#help-lower { 
+
+   a#help-lower {
       bottom: 37px;
    }
 }
@@ -878,7 +878,7 @@ div.search {
    }
    #hide-timeline {
       margin: 0;
-      a { 
+      a {
          border-radius: 0 8px 8px 0;
          color:black;
          border-left: 0;
