--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,11 +73,11 @@
       <li id="trace"><span class="padded">Trace Path</span></li>
       <li id="untrace"><span class="padded">Untrace Path</span></li>
       <hr class='facet-control-ui' id="facet-divider"/>
-      <li class='facet-control-ui'><label><input id="archive" type="checkbox">Resource</label></li>
-      <li class='facet-control-ui'><label><input id="genre" type="checkbox">Genre</label></li>
-      <li class='facet-control-ui'><label><input id="discipline" type="checkbox">Discipline</label></li>
-      <li class='facet-control-ui'><label><input id="doc_type" type="checkbox">Format</label></li>
-      <li class='facet-control-ui'><label><input id="full-results" type="checkbox">Individual Results</label></li>
+      <li class='facet-control-ui'><span id="archive">Resource</span></li>
+      <li class='facet-control-ui'><span id="genre">Genre</span></li>
+      <li class='facet-control-ui'><span id="discipline">Discipline</span></li>
+      <li class='facet-control-ui'><span id="doc_type">Format</span></li>
+      <li class='facet-control-ui'><span id="full-results">Individual Results</span></li>
       <li class='facet-control-ui' id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
       <li class='facet-control-ui' id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
       <hr id="collapse-divider"/>
