adding zoom changes, and fixing intro box height

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <!--[if lt IE 9]>
   <script type="text/javascript" src="aight.min.js"></script>
   <![endif]-->
@@ -27,6 +26,7 @@
       </div>
      <div id="debuglog"></div>
       <%= render :partial => '/layouts/search' %>
+      <%= render :partial => '/layouts/zoom' %>
       <div style="clear: both"></div>
    </div>
 
