--- a/app/views/layouts/_key.html.erb
+++ b/app/views/layouts/_key.html.erb
@@ -1,7 +1,7 @@
 <div id="key">
    <span class="key">Visualize By:</span>
-   <span id="resource-block" class="text-button selected"><label>Resource</label><span class="block resource"></span></span>
-   <span id="genre-block" class="text-button"><label>Genre</label><span class="block genre"></span></span>
-   <span id="discipline-block" class="text-button"><label>Discipline</label><span class="block discipline"></span></span>
-   <span id="format-block" class="text-button"><label>Format</label><span class="block format"></span></span>
+   <input id="resource-block" type="button" value="Resource" selected/><span class="block resource"></span>
+   <input id="genre-block" type="button" value="Genre"/><span class="block genre"></span>
+   <input id="discipline-block" type="button" value="Discipline"><span class="block discipline"></span>
+   <input id="format-block" type="button" value="Format"><span class="block format"></span>
 </div>
