--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -202,7 +202,7 @@ a#help:visited, a#guide:visited {
 
 #site-header {
    z-index: 100;
-   position: fixed;
+   position: absolute;
    top: 0;
    left: 0;
    right: 0;
