--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       </div>
      <div id="debuglog"></div>
       <%= render :partial => '/layouts/search' %>
+      <%= render :partial => '/layouts/zoom' %>
       <div style="clear: both"></div>
    </div>
 
