--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,14 @@
   <![endif]-->
   <title>BigDIVA</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <script src="http://d3js.org/d3.v3.js"></script>
+  <script src="https://d3js.org/d3.v3.js"></script>
   <script type="text/javascript">
       gArcLogoImagePath = "<%= image_path 'arc-logo.png' %>";
       gDebugMode = <%= @debugMode ? 'true' : 'false' %>;
   </script>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
