First stab at adding subscribe link

--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -9,5 +9,6 @@
       <input id="filter" type="button" value="Filter"/>
       <a id="help" target="_blank" href="http://idhmcmain.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
       <a id="guide" target="_blank" href="/resources/">Resource Guide</a>
+      <a id="subscribe" target="_blank" href="http://ar-c.org/bigdiva/">Subscribe</a>
    </div>
 </div>
